# osm-downloader

./: .env.example  .gitignore  CHANGELOG.md  README.md  docker-compose.yaml  osm_config.yaml  pyproject.toml  taskfile.yaml
.github/workflows/: build.yml
osm_downloader/: __init__.py  downloader.py  main.py
