[project]
name = "osm-downloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.2.1",
    "geopandas>=1.1.1",
    "osmnx>=2.0.6",
    "pandas>=2.3.2",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
]

[tool.setuptools]
package-dir = {"" = "."}
packages = ["osm_downloader"]